--- a/tagA.html
+++ b/tagA.html
@@ -6,11 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>esta é uma tag h1</h1>
-    <h2>esta é uma tag h2</h2>
-    <h3>esta é uma tag h3</h3>
-    <h4>esta é uma tag h4</h4>
-    <h5>esta é uma tag h5</h5>
-    <h6>esta é uma tag h6</h6>
+    <a href="https://sp.senai.br/unidade/valinhos/">visite o site do senai valinhos </a>
 </body>
 </html>
